--- a/src/main/ts/src/App.css
+++ b/src/main/ts/src/App.css
@@ -1,11 +1,8 @@
 .App {
-  text-align: center;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
-  align-items: flex-start;
   background-color: #050522;
-  overflow: hidden;
 }
 
 .App-logo {
