--- a/src/main/ts/src/index.css
+++ b/src/main/ts/src/index.css
@@ -1,10 +1,13 @@
 .root {
     position: absolute;
+    margin: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
-    align-items: flex-start;
     background-color: #050522;
-    overflow: hidden;
 }
 @tailwind base;
 @tailwind components;
