--- a/src/main/ts/src/page/HelloPage.module.css
+++ b/src/main/ts/src/page/HelloPage.module.css
@@ -254,8 +254,8 @@
 
 ::-webkit-scrollbar {
     border-radius: 10px;
-    width: 1px;
-    height: 1px;
+    width: 0;
+    height: 0;
 }
 
 .trueCheck{
