--- a/src/main/ts/src/Test.module.css
+++ b/src/main/ts/src/Test.module.css
@@ -2,11 +2,11 @@
     position: absolute;
     z-index: 5;
 
-    width: 40%;
+    width: 20%;
 
 
     border-radius: 5% 2% 2% 5%;
-    left: 30%;
+    align-self: center;
     background-color: #ffecaa;
     box-shadow: 0px 2px 15px 2px #ffecaa66;
 }
